# edgellm

./: .gitignore  .gitmodules  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/release-notes/: 0.1.0.md
.github/workflows/: ci.yml  pr.yml  release.yml
docs/: backends.md  design.md  getting-started.md  usage.md
edgellm-core/: build.gradle.kts  consumer-rules.pro
edgellm-core/src/main/kotlin/io/github/lucas/edgellm/: ChatMessage.kt  DownloadProgress.kt  EdgeLlm.kt  Fit.kt  GenerationEvent.kt  ModelSpec.kt
edgellm-core/src/main/kotlin/io/github/lucas/edgellm/engine/: InferenceEngine.kt
edgellm-core/src/main/kotlin/io/github/lucas/edgellm/internal/: DeviceProfiler.kt  Downloader.kt  EngineRegistry.kt  FitChecker.kt
edgellm-core/src/main/kotlin/io/github/rezzaghi/edgellm/: Catalog.kt  ChatMessage.kt  DownloadProgress.kt  EdgeLlm.kt  Fit.kt  GenerationEvent.kt  ModelSpec.kt
edgellm-core/src/main/kotlin/io/github/rezzaghi/edgellm/engine/: InferenceEngine.kt
edgellm-core/src/main/kotlin/io/github/rezzaghi/edgellm/internal/: BackendRouter.kt  DeviceProfiler.kt  Downloader.kt  EngineRegistry.kt  FitChecker.kt  ModelCatalog.kt
edgellm-core/src/main/res/raw/: edgellm_catalog.json
edgellm-core/src/test/kotlin/io/github/rezzaghi/edgellm/: CatalogTest.kt
edgellm-core/src/test/kotlin/io/github/rezzaghi/edgellm/internal/: BackendRouterTest.kt  DownloaderTest.kt  FitCheckerTest.kt
edgellm-engine-llamacpp/: build.gradle.kts  consumer-rules.pro
edgellm-engine-llamacpp/src/main/: AndroidManifest.xml
edgellm-engine-llamacpp/src/main/cpp/: CMakeLists.txt  host-toolchain-win.cmake.in  llama_jni.cpp  opencl_stub.cpp
edgellm-engine-llamacpp/src/main/kotlin/io/github/lucas/edgellm/engine/llamacpp/: LlamaBridge.kt  LlamaCppEngine.kt  Utf8StreamDecoder.kt
edgellm-engine-llamacpp/src/main/kotlin/io/github/rezzaghi/edgellm/engine/llamacpp/: LlamaBridge.kt  LlamaCppEngine.kt  Utf8StreamDecoder.kt
edgellm-engine-llamacpp/src/test/kotlin/io/github/rezzaghi/edgellm/engine/llamacpp/: Utf8StreamDecoderTest.kt
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/kotlin/io/github/lucas/edgellm/sample/: MainActivity.kt
sample/src/main/kotlin/io/github/rezzaghi/edgellm/sample/: ChatViewModel.kt  MainActivity.kt  SampleApp.kt
sample/src/main/kotlin/io/github/rezzaghi/edgellm/sample/ui/: ChatScreen.kt
scripts/: gradlew-vs.bat
